--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "nanoid": "^2.1.11",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
