--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nanoid": "^2.1.11",
     "nuxt": "^2.14.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "vee-validate": "^3.4.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
