--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nanoid": "^2.1.11",
     "nuxt": "^2.14.5",
     "sequelize": "^6.3.5",
-    "vee-validate": "^3.4.2"
+    "vee-validate": "^3.4.2",
+    "vue-html2pdf": "^1.8.0",
+    "vuetify-datetime-picker": "^2.1.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
